force-app/main/default/objects/PRF__c/PRF__c.object-meta.xml
<CustomObject>
    <label>PRF</label>
    <nameField>
        <displayFormat>PRF-{0000}</displayFormat>
        <label>PRF Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PRFs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>