force-app/main/default/objects/PRF__c/fields/ApheresisCenter__c.field-meta.xml
<CustomField>
    <fullName>ApheresisCenter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Selected Apheresis Center</description>
    <inlineHelpText>Selected Apheresis Center</inlineHelpText>
    <label>Apheresis Center</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PRFs (Apheresis Center)</relationshipLabel>
    <relationshipName>PRFs3</relationshipName>
    <type>Lookup</type>
</CustomField>