force-app/main/default/objects/PRF__c/fields/BodyWeightInKg__c.field-meta.xml
<CustomField>
    <fullName>BodyWeightInKg__c</fullName>
    <description>Patient: Body Weight in kg</description>
    <inlineHelpText>Patient: Body Weight in kg</inlineHelpText>
    <label>Body Weight in kg</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>