force-app/main/default/objects/PRF__c/fields/DateOfBirth__c.field-meta.xml
<CustomField>
    <fullName>DateOfBirth__c</fullName>
    <description>Patient: Date of Birth (DOB)</description>
    <inlineHelpText>Patient: Date of Birth (DOB)</inlineHelpText>
    <label>Date of Birth (DOB)</label>
    <type>Date</type>
</CustomField>