force-app/main/default/objects/PRF__c/fields/DateOfBirthDAY__c.field-meta.xml
<CustomField>
    <fullName>DateOfBirthDAY__c</fullName>
    <label>Date of Birth DAY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>