force-app/main/default/objects/PRF__c/fields/DateOfBirthMONTH__c.field-meta.xml
<CustomField>
    <fullName>DateOfBirthMONTH__c</fullName>
    <label>Date of Birth MONTH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>