force-app/main/default/objects/PRF__c/fields/DateOfBirthYEAR__c.field-meta.xml
<CustomField>
    <fullName>DateOfBirthYEAR__c</fullName>
    <label>Date of Birth YEAR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>