force-app/main/default/objects/PRF__c/fields/Hair_Color__c.field-meta.xml
<CustomField>
    <fullName>Hair_Color__c</fullName>
    <description>Hair color</description>
    <inlineHelpText>Hair color</inlineHelpText>
    <label>Hair Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>