force-app/main/default/objects/PRF__c/fields/HCP__c.field-meta.xml
<CustomField>
    <fullName>HCP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Selected HCP</description>
    <inlineHelpText>Selected HCP</inlineHelpText>
    <label>HCP</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>PRFs</relationshipLabel>
    <relationshipName>PRFs</relationshipName>
    <type>Lookup</type>
</CustomField>