force-app/main/default/objects/PRF__c/fields/InfusionCenter__c.field-meta.xml
<CustomField>
    <fullName>InfusionCenter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Selected InfusionCenter</description>
    <inlineHelpText>Selected InfusionCenter</inlineHelpText>
    <label>Infusion Center</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PRFs (Infusion Center)</relationshipLabel>
    <relationshipName>PRFs5</relationshipName>
    <type>Lookup</type>
</CustomField>