force-app/main/default/objects/PRF__c/fields/Order_Email__c.field-meta.xml
<CustomField>
    <fullName>Order_Email__c</fullName>
    <description>Order Email</description>
    <inlineHelpText>Order Email</inlineHelpText>
    <label>Order Email</label>
    <type>Email</type>
</CustomField>