force-app/main/default/objects/PRF__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <description>Order Number</description>
    <inlineHelpText>Order Number</inlineHelpText>
    <label>Order Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>