force-app/main/default/objects/PRF__c/fields/PatientClassification__c.field-meta.xml
<CustomField>
    <fullName>PatientClassification__c</fullName>
    <inlineHelpText>Pediatric / Adult</inlineHelpText>
    <label>Patient Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pediatric</fullName>
            </value>
            <value>
                <fullName>Young Adult</fullName>
            </value>
            <value>
                <fullName>Adult</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>