force-app/main/default/objects/PRF__c/fields/PickupLocation__c.field-meta.xml
<CustomField>
    <fullName>PickupLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Selected Pickup Location</description>
    <inlineHelpText>Selected Pickup Location</inlineHelpText>
    <label>Pickup Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PRFs (Pickup Location)</relationshipLabel>
    <relationshipName>PRFs4</relationshipName>
    <type>Lookup</type>
</CustomField>