force-app/main/default/objects/PRF__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Selected Purpose</description>
    <inlineHelpText>Selected Purposee</inlineHelpText>
    <label>Purpose</label>
    <referenceTo>Purpose__c</referenceTo>
    <relationshipLabel>PRFs</relationshipLabel>
    <relationshipName>PRFs</relationshipName>
    <type>Lookup</type>
</CustomField>