force-app/main/default/objects/PRF__c/fields/ShipToLocation__c.field-meta.xml
<CustomField>
    <fullName>ShipToLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Selected ShipToLocation</description>
    <inlineHelpText>Selected ShipToLocation</inlineHelpText>
    <label>ShipTo Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PRFs (ShipTo Location)</relationshipLabel>
    <relationshipName>PRFs6</relationshipName>
    <type>Lookup</type>
</CustomField>