force-app/main/default/objects/PRF__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Selected Site</description>
    <inlineHelpText>Selected Site</inlineHelpText>
    <label>Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PRFs (Site)</relationshipLabel>
    <relationshipName>PRFs1</relationshipName>
    <type>Lookup</type>
</CustomField>