force-app/main/default/objects/PRF__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Selected Team</description>
    <inlineHelpText>Selected Team</inlineHelpText>
    <label>Team</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PRFs (Team)</relationshipLabel>
    <relationshipName>PRFs2</relationshipName>
    <type>Lookup</type>
</CustomField>