force-app/main/default/objects/PRF__c/fields/Wizard__c.field-meta.xml
<CustomField>
    <fullName>Wizard__c</fullName>
    <description>Wizard selected</description>
    <inlineHelpText>Wizard selected</inlineHelpText>
    <label>Wizard</label>
    <length>200</length>
    <type>Text</type>
</CustomField>